--- a/css/agency.css
+++ b/css/agency.css
@@ -202,9 +202,13 @@ fieldset[disabled] .btn-xl.active {
 
 .navbar-default .nav li a {
     text-transform: uppercase;
-    font-weight: 400;
+    font-weight: 500;
     letter-spacing: 1px;
     color: #fff;
+}
+
+.navbar-shrink .nav li a{
+    font-weight: 300;
 }
 
 .navbar-default .nav li a:hover,
@@ -703,7 +707,6 @@ section#contact .text-danger {
 
 footer {
     padding: 25px 0;
-    text-align: center;
 }
 
 footer span.copyright {
@@ -720,6 +723,7 @@ footer ul.quicklinks {
 }
 
 ul.social-buttons {
+    text-align: center;
     margin-bottom: 0;
 }
 
