--- a/less/agency.less
+++ b/less/agency.less
@@ -246,16 +246,16 @@ section {
 
 // Portfolio Section
 
-#portfolio {
-    .portfolio-item {
+#products {
+    .products-item {
         margin: 0 0 15px;
         right: 0;
-        .portfolio-link {
+        .products-link {
             display: block;
             position: relative;
             max-width: 400px;
             margin: 0 auto;
-            .portfolio-hover {
+            .products-hover {
                 background: fade(@brand-primary, 90%);
                 position: absolute;
                 width: 100%;
@@ -267,7 +267,7 @@ section {
                 &:hover {
                     opacity: 1;
                 }
-                .portfolio-hover-content {
+                .products-hover-content {
                     position: absolute;
                     width: 100%;
                     height: 20px;
@@ -286,7 +286,7 @@ section {
                 }                
             }            
         }
-        .portfolio-caption {
+        .products-caption {
         	max-width: 400px;
         	margin: 0 auto;
         	background-color: white;
@@ -310,8 +310,8 @@ section {
 }
 
 @media(min-width:767px) {
-    #portfolio {
-        .portfolio-item {
+    #products {
+        .products-item {
             margin: 0 0 30px;
         }
     }
