--- a/less/agency.less
+++ b/less/agency.less
@@ -631,7 +631,7 @@ ul.social-buttons {
 	outline: none;
 }
 
-.portfolio-modal {
+.products-modal {
 	.modal-content {
 	    border-radius: 0;
 	    background-clip: border-box;
