--- a/less/agency.less
+++ b/less/agency.less
@@ -6,6 +6,8 @@
 body {
 	overflow-x: hidden;
 	.body-font;
+    font-size: 14px;
+  line-height: 1.75;
 }
 
 .text-muted {
@@ -17,8 +19,8 @@ body {
 }
 
 p {
-	font-size: 14px;
-	line-height: 1.75;
+
+
 }
 
 p.large {
@@ -152,7 +154,7 @@ h1, h2, h3, h4, h5, h6 {
 			border-radius: 3px;
 		}
     }
-    .navbar-default.navbar-shrink {
+    .navbar-default.navbar-shrink, .navbar-default.navbar-dark {
     	background-color: @gray-darkest;
         padding: 10px 0;
 		.navbar-brand {
@@ -242,6 +244,11 @@ section {
 .service-heading {
 	margin: 15px 0;
 	text-transform: none;
+}
+
+// posts
+#posts{
+  font-size: 18px;
 }
 
 // Portfolio Section
