accelerometer block diagram

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -7,7 +7,7 @@ layout: default
         <div class="intro-text">
             <div class="intro-lead-in">{{ page.leadIn }}</div>
             <div class="intro-heading">{{ page.heading }}</div>
-            <a href="{{ page.reference }}" class="page-scroll btn btn-xl">{{ page.buttonText }}</a>
+            <a href="#{{ page.reference }}" class="page-scroll btn btn-xl">{{ page.buttonText }}</a>
         </div>
     </div>
 </header>
