--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,8 +15,27 @@ navigation: navbar-dark
   <article>
     {{ content }}
   </article>
+    <h4>Disclaimer</h4>
+    <p><small><i>
+        If you find anything unclear for you or something incorrect in our posts or you just see some potential improvement please comment on it.
+        At the end it is about community learning and rising everyone technical awareness. Nobody's perfect, yet we are not either.
+        Lets discuss it!
+    </i></small></p>
+    <div id="disqus_thread"></div>
+    <script type="text/javascript">
+        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+        var disqus_shortname = 'icarus-sensors'; // required: replace example with your forum shortname
+
+        /* * * DON'T EDIT BELOW THIS LINE * * */
+        (function() {
+            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 </div>
-</div>
+        </div>
 </div>
 
 </section>
