--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,13 +17,13 @@
             <ul class="nav navbar-nav navbar-right">
                     <!--<li class="hidden"><a href="#page-top"></a></li>-->
                 {% if page.active == "home" %}
-                    <li class="active"><a href="/">Our Project</a></li>
+                    <!--<li class="active"><a href="/">Our Project</a></li>-->
                     <li><a href="/blog.html">Blog</a></li>
                 {% elsif page.active == "blog" %}
-                    <li><a href="/">Our Project</a></li>
+                    <!--<li><a href="/">Our Project</a></li>-->
                     <li class="active"><a href="/blog.html">Blog</a></li>
                 {% else %}
-                    <li><a href="/">Our Project</a></li>
+                    <!--<li><a href="/">Our Project</a></li>-->
                     <li><a href="/blog.html">Blog</a></li>
                 {% endif %}
 
