clean header after changing to blog only

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,20 +15,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-                    <!--<li class="hidden"><a href="#page-top"></a></li>-->
-                {% if page.active == "home" %}
-                    <!--<li class="active"><a href="/">Our Project</a></li>-->
-                    <li><a href="/blog.html">Blog</a></li>
-                {% elsif page.active == "blog" %}
-                    <!--<li><a href="/">Our Project</a></li>-->
-                    <li class="active"><a href="/blog.html">Blog</a></li>
-                {% else %}
-                    <!--<li><a href="/">Our Project</a></li>-->
-                    <li><a href="/blog.html">Blog</a></li>
-                {% endif %}
-
-
-
+                    <li class="active"><a href="/">Blog</a></li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
